--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+/* HEADER */
 
+.hero {
+  background-color: #4ea0ff;
+  height: 100px;
+  background-image: url(../img/pattern.png);
+  background-size: 30%;
+  background-repeat: repeat;
+  text-align: end;
+  position: relative;
+}
+
+.logo-hero {
+  width: 15%;
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+}
+
+/* /HEADER */
