--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
   margin-bottom: 15px;
 }
 
+.mrg-btm-small {
+  margin-bottom: 10px;
+}
+
+.mrg-btm-big {
+  margin-bottom: 20px;
+}
+
 .center {
   width: 50%;
   margin: auto;
@@ -106,4 +114,37 @@ td {
 .light-blue {
   background-color: #b1e5f2;
 }
+
 /* /MAIN */
+
+/* FOOTER */
+.box {
+  width: 250px;
+  height: 200px;
+}
+
+.footer-img-1 {
+  background-image: url(../img/monitor.jpg);
+  background-size: cover;
+  background-position: center;
+
+  padding-left: 10px;
+  padding-top: 10px;
+  font-weight: bold;
+}
+
+.footer-img-2 {
+  background-image: url(../img/graph.jpg);
+  background-size: cover;
+  background-position: center;
+
+  padding-left: 10px;
+  padding-top: 10px;
+  font-weight: bold;
+}
+.footer-link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 24px;
+}
+/* /FOOTER */
